--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 <body>
     <script>
 
+var x = 10;
+
+function timesTen(a) {
+    return a * 10;
+}
+
+var y = timesTen(x);
+
+console.log(y);
     </script>
 </body>
 </html>
